<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.letsfind.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:background="#363636"
        android:text="@string/About"
        android:textColor="@+color/white"
        android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="19dp"
        android:background="#363636"
        android:text="@string/Market"
        android:textColor="@color/white"
        android:width="@dimen/abc_action_bar_stacked_tab_max_width" />
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="19dp"
        android:background="#363636"
        android:text="@string/Ranking"
        android:textColor="@color/white"
        android:width="@dimen/abc_action_bar_stacked_tab_max_width" />
        />

    <Button
        android:id="@+id/button1"
        style="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="#363636"
        android:text="@string/Play"
        android:textColor="@color/white"
        android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

    <ImageView
        android:contentDescription="@string/Coins"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/imageView1"
        android:minHeight="5dp"
        android:minWidth="5dp"
        android:src="@drawable/moedas" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/Logo"
        android:minHeight="130dp"
        android:minWidth="130dp"
        android:src="@drawable/bussola" />

</RelativeLayout>
