<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@drawable/bg3"
    android:gravity="center|fill_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.uneb.letsfind.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="2dp"
            android:src="@drawable/moedas" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_moedas"
            android:layout_marginTop="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:layout_weight="0.66"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/buttonJogar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:background="#363636"
            android:text="@string/Play"
            android:textColor="#ffffff"
            android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

        <Button
            android:id="@+id/buttonSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="#363636"
            android:text="@string/About"
            android:textColor="#ffffff"
            android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

        <Button
            android:id="@+id/buttonRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="#363636"
            android:text="@string/Ranking"
            android:textColor="#ffffff"
            android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

        <Button
            android:id="@+id/buttonMercado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="#363636"
            android:text="@string/Market"
            android:textColor="#ffffff"
            android:width="@dimen/abc_action_bar_stacked_tab_max_width" />
    </LinearLayout>

</LinearLayout>