<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ViewFlipper
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/hdpi"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/interna"
            android:orientation="vertical"
            android:gravity="center"
             >

            <!-- direita -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:drawableLeft="@drawable/moedas"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="$256"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

 		<Button
            android:id="@+id/buttonJogar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:background="#8B0000"
            android:text="@string/Play"
            android:textColor="#ffffff"
            android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

        <Button
            android:id="@+id/buttonSobre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="#8B0000"
            android:text="@string/About"
            android:textColor="#ffffff"
            android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

        <Button
            android:id="@+id/buttonRanking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="#8B0000"
            android:text="@string/Ranking"
            android:textColor="#ffffff"
            android:width="@dimen/abc_action_bar_stacked_tab_max_width" />

        <Button
            android:id="@+id/buttonMercado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="#8B0000"
            android:text="@string/Market"
            android:textColor="#ffffff"
            android:width="@dimen/abc_action_bar_stacked_tab_max_width" />           

        </LinearLayout>
        
        
    </ViewFlipper>

</LinearLayout>
